[package]
name = "aiogram_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "aiogram_rust"
crate-type = ["cdylib"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
aes = "0.8"
block-modes = "0.9"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
base64 = "0.21"

# Text processing and analysis
regex = "1.9"
unicode-segmentation = "1.10"
whatlang = "0.16"

# Data analysis and statistics
statrs = "0.16"
ndarray = "0.15"
ndarray-stats = "0.5"

# Performance and utilities
rayon = "1.7"
crossbeam = "0.8"
dashmap = "5.4"
lazy_static = "1.4"

# FFI and memory management
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort" 